<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textSize="30sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textSize="20sp"
        android:textColor="#ff5885"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        android:textSize="20sp"
        android:typeface="serif"
        />  <!-- 다른 폰트를 사용하는법은 따로 있다 -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text5"
        android:textSize="20sp"
        android:singleLine="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_str1"
        android:textSize="20sp"
        android:layout_margin="20dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_str1"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:enabled="false"
        /> <!-- 현재는 쓸 수 있지만 디플리케이트돼서 없어질 수 있어서 취소선 -->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_str1"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:clickable="false"
        android:rotation="10"
        />

</LinearLayout>
